2008-04-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokercashier.py (PokerCashier.cashInValidateNote):
	Added '#pragma: no cover' for lines that hits bug in coverage.py.

2008-04-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokercashier.py.in
	(PokerCashierTestCase.test08_forcecashInUpdateSafeFail): Wrote function.
	Added my copyright notice.
	(PokerCashierTestCase.test09_forceCashInUpdateCounter): Wrote function.

	* pokernetwork/pokercashier.py (PokerCashier.cashInUpdateSafe):
	"message" was not a defined variable when called from the
	PacketError.  Created message and used it both for error output
	and in the return packet.

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test61_tableCreateFails): Wrote function.
	(PokerAvatarTestCase.createTableForceFail): Wrote function.
	(PokerAvatarTestCase.test62_ignoreAutoBlindAnteInTourney): Wrote
	function.
	(PokerAvatarTestCase.autoBlindAnteForceTourney): Wrote function.
	(PokerAvatarTestCase.joinTable): Indention bug in the testing of
	"found" variable; should be outside of the "for packet" loop.
	(PokerAvatarTestCase.setUp): Added a third client; only used for
	test 63.
	(PokerAvatarTestCase.joinTableWhenHandRunning): Wrote function.
	(PokerAvatarTestCase.test63_newObserver): Wrote function.
	(PokerAvatarTestCase.test64_testTinyFunctions): Renamed function
	from test99_testTinyFunctions.
	(PokerAvatarTestCase.statsQuery): Fixed packet.players to be 3,
	since I now have three players connected, not two.

2008-04-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.doLogoutSucceed): Renamed function from
	doLogout as succeed/fail cases are now split.
	(PokerAvatarTestCase.doLogoutFail): split out doLogout fail
	conditions.

2008-04-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test53_autoMuck): Wrote function.
	(PokerAvatarTestCase.autoMuck): Wrote function.
	(PokerAvatarTestCase.test54_doQuit): Wrote function.